# logos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.foundry  HCG_DATA_LAYER.md  INTENT.md  LICENSE  README.md  SECURITY.md  TEST_PARAMETERS_AUDIT.md  coverage.xml  docker-compose.otel.yml  pyproject.toml  requirements-dev.txt  setup.py
.claude/: HANDOFF.md
.claude/agents/: project-manager.md
.context/: EPISODES.md
.github/: CREATING_ISSUES.md  EPOCHS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_DRAFT_shared_test_utils.md  ISSUE_TEMPLATE.md  PROJECT_BOARD_SETUP.md  PULL_REQUEST_TEMPLATE.md  QUICK_START.md  README.md  REQUIRED_CHECKS.md  TESTING_GUIDE.md  copilot-instructions.md  labels.yml  project_config.yml
.github/ISSUE_TEMPLATE/: apollo-task.yml  config.yml  documentation-task.yml  (+6 more)
.serena/: project.yml
adr/: 0003-shacl-for-level-1-validation.md  TEMPLATE.md
api/: GITHUB_PAGES_SETUP.md  apollo.html  cwm-e.html  hermes.html  index.html  persona.html  sophia.html
architecture/: LOGOS_SPEC.md  LOGOS_SPEC_FLEXIBLE.md  PHASE1_SPEC.md  PHASE2_SPEC.md  PHASE3_SPEC.md  README.md
config/: otel-collector-config.yaml  prometheus.yml
contracts/: apollo.openapi.yaml  cwm-e.openapi.yaml  hermes.openapi.yaml  persona.openapi.yaml  sophia.openapi.yaml
docs/: 2026-02-01-otel-instrumentation-design.md  ARCHITECTURE.md  CANDID_ASSESSMENT_2025_11.md  CI_CD.md  CI_INVENTORY.md  CODE_QUALITY.md  CONTAINER_DIGEST_VERIFICATION.md  DEPENDENCY_ISSUES_GUIDE.md  GIT_PROJECT_STANDARDS.md  HARDCODED_PARAMS_RESOLUTION.md  LOCAL_DEVELOPMENT.md  OBSERVABILITY_QUERIES.md  PACKAGE_PUBLISHING.md  PHASE1_ISSUES.md  PHASE1_OVERRIDES.md  PHASE1_PROTOTYPE_EXPECTATIONS.md  PHASE1_VERIFY.md  PROTOTYPE_CAPABILITIES.md  QUICK_START_PROJECT_BOARD.md  README.md  RESEARCH.md  SECTION_1.2_IMPLEMENTATION.md  SPEC.md  STATUS.md  TESTING_ISSUES.md  TESTING_STANDARDS.md  TEST_PARAMETERS_AUDIT.md  TEST_SKIP_CONDITIONS.md  TOOLING.md  VISION.md  action_items.md  vjepa_finetune_pytorch_native_best_practices_2gpu (1).ipynb.txt
evidence/: PHASE1.md  README.md
examples/: README.md  demo_abstract_plan.py  p2_m4_demo.py  sdk_usage_example.py  sdk_usage_example.ts
guides/: GETTING_STARTED.md
hcg/: CWM_A.md  CWM_E.md  CWM_STATE_CONTRACT_ROLLOUT.md
infra/: Dockerfile.media-ingest  Dockerfile.shacl-validation  OTEL_SETUP.md  README.md  SHACL_SERVICE.md  bootstrap_phase1.sh  check_hcg_health.py  docker-compose.hcg.dev.yml  docker-compose.otel.yml  grafana-dashboards.yaml  grafana-datasources.yaml  init_milvus.sh  init_milvus_collections.py  load_ontology.sh  otel-collector-config.yaml  shacl_validation_service.py  tempo-config.yaml
issues/: ISSUE-236-SUBTASKS.md  ISSUE-280-HERMES-LOCAL-LLM.md  ISSUE-282-POETRY-DEPENDENCY-CLEANUP.md
logos_config/: INTENT.md  README.md  __init__.py  embedding.py  env.py  health.py  ports.py  settings.py  text.py
logos_cwm_e/: README.md  __init__.py  api.py  reflection.py
logos_events/: __init__.py  event_bus.py
logos_experiment/: __init__.py  agent.py  config.py  runner.py
logos_hcg/: README.md  __init__.py  client.py  demo_planner.py  demo_retrieval.py  edge.py  load_hcg.py  models.py  planner.py  queries.py  seeder.py  shacl_validator.py  sync.py
logos_observability/: README.md  __init__.py  exporter.py  telemetry.py
logos_perception/: README.md  __init__.py  app.py  ingest.py  jepa_runner.py  media_api.py  models.py
logos_persona/: README.md  __init__.py  api.py  diary.py  persona.openapi.yaml
logos_sophia/: __init__.py  api.py  simulation.py  sophia.openapi.yaml
logos_test_utils/: __init__.py  config.py  docker.py  env.py  fixtures.py  health.py  logging.py  milvus.py  neo4j.py
logos_tools/: create_issues_by_epoch.py  generate_issues.py
milestones/: M4_End_to_End_Pick_and_Place.json  P2_M4_VERIFICATION.md  Phase_1_HCG_and_Abstract_Pipeline.json
old/: CLEANUP_PLAN.md  PHASE1_ISSUES.md  PHASE1_VERIFY.md
ontology/: EMBEDDING_LIFECYCLE.md  README.md  README_PICK_AND_PLACE.md  RUNBOOK.md  SHACL_COVERAGE.md  VALIDATION.md  core_ontology.cypher  load_and_validate_shacl.py  load_shacl_via_n10s.py  shacl_shapes.ttl  test_data_pick_and_place.cypher  test_data_research_paper.cypher  validate_ontology.py
operations/: METRICS_IDEAS.md  OBSERVABILITY_QUERIES.md  PHASE2_VERIFY.md  PORT_REFERENCE.md  TESTING.md  TEST_STANDARDIZATION_MIGRATION.md
outreach/: README.md  REFERENCES.md
phase1/: PHASE1_SPEC.md
planner_stub/: CI_INTEGRATION.md  README.md  __init__.py  app.py  client.py  models.py  planner.py
plans/: 2025-12-30-flexible-ontology-design.md
reference/: README.md
research/: MAKE_LOGOS_GREAT_AGAIN.md  PROJECT_LOGOS_PAPER_FOUNDATION.md
scripts/: README.md  bump-downstream.sh  collect-test-metrics.sh  dev.sh  e2e_prototype.sh  generate-api-docs.sh  generate-sdks.sh  generate_sdks.sh  lint.sh  run_m4_demo.sh  setup-local-dev.sh  start-otel-stack.sh  start_planner.sh  start_services.sh  start_test_services.sh  stop-otel-stack.sh  sync-sdks.sh  test.sh  test_e2e.sh  test_integration.sh  test_unit.sh  verify_media_ingestion.py
sdk/: README.md
sdk-web/: README.md
sdk/logos_hcg/: README.md  pyproject.toml
sdk/logos_hcg/logos_hcg/: __init__.py  client.py  config.py  exceptions.py  models.py  validation.py
sdk/logos_hcg/tests/: conftest.py  test_client.py  test_config.py  test_models.py  test_validation.py
sophia/: README.md  __init__.py  cwm_a.py  cwm_g.py  executor.py  orchestrator.py  planner.py
standards/: GIT_PROJECT_STANDARDS.md  TESTING_STANDARDS.md
tests/: __init__.py  test_create_issues_by_epoch.py  test_edge_model.py  test_edge_reification.py  test_generate_dependency_issues.py  test_generate_issues.py  test_hcg_milvus_dim.py  test_hcg_milvus_sync.py  test_hcg_seeder.py  test_hcg_write_operations.py  test_hermes_contract.py  test_ontology_extension.py  test_planner_stub.py  test_pytest_framework.py  test_queries_reified.py  test_seeder_reified.py
utils/: README.md  apollo_web_start.sh  test_hermes.sh  test_logos.sh
(+766 files in other folders)
